<resources>
    <string name="app_name">Debts Manager</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_show_debts">ShowDebtsActivity</string>
    <string name="comment">Comment&#8230;</string>
    <string name="add_debt">Add Debt</string>
    <string name="date_format">dd/mm/yyyy</string>
    <string name="select_date">Select a date</string>
    <string name="no_comment">No comment</string>
    <string name="auto_generated_comment">This comment was auto-generated and has no useful information bound to it!</string>
    <string name="value_necessary">At this point is an actual value necessary: </string>
    <string name="amount_less_zero">The amount of money must be bigger than 0</string>
    <string name="show_paid_debts">Show paid debts</string>
    <string name="show_unpaid_debts">Show unpaid debts</string>
    <string name="search_debtors">Search debtors</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="items_selected">Items selected: </string>
    <string name="name">Name</string>
    <string name="amount">Amount</string>
    <string name="paid">paid</string>
    <string name="title_activity_debtor_view">DebtorViewActivity</string>
    <string name="open_debtor_overview">Debtor</string>
    <string name="pay_back">Pay back&#8230;</string>
    <string name="sum_of_debts">Total sum of debts:</string>
    <string name="amount_of_open_debts">Amount of open debts:</string>
    <string name="all_debts">All debts</string>
    <string name="cent">Cent</string>
    <string name="euro">Euro</string>
    <string name="how_much_pay_back">How much did he pay you back</string>
    <string name="show_all_debts">Show all debts</string>
    <string name="welcome">Welcome!</string>
</resources>
