<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    android:descendantFocusability="blocksDescendants">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:orientation="horizontal"
        android:weightSum="1">

        <CheckBox
            android:id="@+id/paid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.51"
            android:text="@string/name"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:text="@string/amount"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_format"
            android:textColor="#000000"
            android:textSize="18sp"
            android:layout_weight="0.24"/>
    </LinearLayout>

    <TextView
        android:id="@+id/comment"
        android:layout_marginLeft="7dp"
        android:layout_marginStart="7dp"
        android:layout_marginRight="2dp"
        android:layout_marginEnd="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="9"
        android:textColor="#000000"
        android:text="@string/no_comment"
        android:textSize="18sp"/>

</LinearLayout>